[workspace]
members = [
    "openpgp",
    "autocrypt",
    "buffered-reader",
    "ipc",
    "net",
    "sequoia-sq",
]

[profile.release]
debug = true
# The Rust Crypto crates are *very* slow when compiled without any
# optimizations.  Turn on some optimizations.
[profile.dev.package.aes]
opt-level = 2
[profile.dev.package.aes-gcm]
[profile.dev.package.argon2]
[profile.dev.package.blake2]
[profile.dev.package.block-padding]
[profile.dev.package.blowfish]
[profile.dev.package.camellia]
[profile.dev.package.cast5]
[profile.dev.package.cipher]
[profile.dev.package.cfb-mode]
[profile.dev.package.des]
[profile.dev.package.digest]
[profile.dev.package.dsa]
[profile.dev.package.eax]
[profile.dev.package.ecb]
[profile.dev.package.ecdsa]
[profile.dev.package.ed25519]
[profile.dev.package.ed25519-dalek]
[profile.dev.package.idea]
[profile.dev.package.keccak]
[profile.dev.package.md-5]
[profile.dev.package.num-bigint-dig]
[profile.dev.package.ocb3]
[profile.dev.package.p256]
[profile.dev.package.p384]
[profile.dev.package.p521]
[profile.dev.package.ripemd]
[profile.dev.package.rsa]
[profile.dev.package.sha2]
[profile.dev.package.sha3]
[profile.dev.package.twofish]
[profile.dev.package.x25519-dalek]

[patch.crates-io]
openssl = { git = "https://github.com/teythoon/rust-openssl", branch = "justus/pqc" }
openssl-sys = { git = "https://github.com/teythoon/rust-openssl", branch = "justus/pqc" }