[package]
sequoia-openpgp = { path = "../openpgp", version = "2.0.0", default-features = false, features = ["crypto-openssl"] }
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "2.0.0", default-features = false, features = ["crypto-openssl"] }
sequoia-openpgp = { path = "../openpgp", version = "2.0.0", default-features = false, features = ["crypto-openssl"] }
anyhow = "1"
libfuzzer-sys = "0.4"

sequoia-openpgp = { path = "../openpgp", version = "2.0.0", default-features = false, features = ["crypto-openssl"] }
path = ".."
default-features = false

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "cert_from_bytes"
path = "fuzz_targets/cert_from_bytes.rs"
test = false
doc = false

[[bin]]
name = "inline_verify_from_bytes"
path = "fuzz_targets/inline_verify_from_bytes.rs"

[[bin]]
name = "csf_verify_from_bytes"
path = "fuzz_targets/csf_verify_from_bytes.rs"
test = false
doc = false

[[bin]]
name = "decrypt_from_bytes"
path = "fuzz_targets/decrypt_from_bytes.rs"
test = false
doc = false
